templates/redshift.template
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Creates a RedShift cluster within a VPC.  **WARNING** This template creates an Amazon Redshift cluster of the size and instance type that you specify. You will be billed for the AWS resources used if you create a stack from this template.",
    "Parameters": {
        "VpcId": {
            "Description": "VPC id.",
            "Type": "AWS::EC2::VPC::Id"
        },
        "SubnetId": {
            "Description": "Redshift subnet id.",
            "Type": "AWS::EC2::Subnet::Id"
        },
        "RedshiftUsername": {
            "Description": "The user name that is associated with the master user account for the cluster that is being created",
            "Type": "String"
        },
        "RedshiftPassword": {
            "Description": "The password that is associated with the master user account for the cluster that is being created.",
            "Type": "String",
            "NoEcho": "true"
        },
        "QSRedshiftRoleARN": {
            "Description": "QSRedshiftRole ARN",
            "Type": "String"
        },
        "RedshiftInboundCIDR": {
            "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\\/(1[6-9]|2[0-8]))$",
            "ConstraintDescription": "CIDR block parameter must be in the form x.x.x.x/16-28",
            "Description": "CIDR block that gets access to Redshift",
            "Type": "String"
        }
    },
    "Mappings": {
        "RegionMap": {
            "us-east-1": {
                "KinesisFirehoseCIDR": "52.70.63.192/27"
            },
            "us-west-2": {
                "KinesisFirehoseCIDR": "52.89.255.224/27"
            }
        }
    },
    "Resources": {
        "RedshiftCluster": {
            "Type": "AWS::Redshift::Cluster",
            "Properties": {
                "ClusterType": "single-node",
                "NodeType": "dc1.large",
                "DBName": "quickstart",
                "IamRoles": [
                    {
                        "Ref":
                            "QSRedshiftRoleARN"
                    }
                ],
                "MasterUsername": {
                    "Ref": "RedshiftUsername"
                },
                "MasterUserPassword": {
                    "Ref": "RedshiftPassword"
                },
                "VpcSecurityGroupIds": [
                    {
                        "Ref": "RedshiftSecurityGroup"
                    }
                ],
                "ClusterSubnetGroupName": {
                    "Ref": "RedshiftClusterSubnetGroup"
                },
                "PubliclyAccessible": "true",
                "Port": "5439"
            }
        },
        "RedshiftClusterSubnetGroup": {
            "Type": "AWS::Redshift::ClusterSubnetGroup",
            "Properties": {
                "Description": "Cluster subnet group",
                "SubnetIds": [
                    {
                        "Ref": "SubnetId"
                    }
                ]
            }
        },
        "RedshiftSecurityGroup": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "VpcId": {
                    "Ref": "VpcId"
                },
                "GroupDescription": "Enable JDBC port",
                "SecurityGroupIngress": [
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5439",
                        "ToPort": "5439",
                        "CidrIp": {
                            "Ref": "RedshiftInboundCIDR"
                        }
                    },
                    {
                        "IpProtocol": "tcp",
                        "FromPort": "5439",
                        "ToPort": "5439",
                        "CidrIp": {
                            "Fn::FindInMap": [
                                "RegionMap",
                                {
                                    "Ref": "AWS::Region"
                                },
                                "KinesisFirehoseCIDR"
                            ]
                        }
                    }
                ]
            }
        }
    },
    "Outputs": {
        "ConnectionURL": {
            "Description": "Cluster endpoint",
            "Value": {
                "Fn::Join": [
                    "",
                    [
                        "jdbc:redshift://",
                        {
                            "Fn::GetAtt": [
                                "RedshiftCluster",
                                "Endpoint.Address"
                            ]
                        },
                        ":",
                        {
                            "Fn::GetAtt": [
                                "RedshiftCluster",
                                "Endpoint.Port"
                            ]
                        },
                        "/quickstart"
                    ]
                ]
            }
        }
    }
}
